[package]
name = "jobshop-gui"
version = "0.1.0"
authors = ["Zino Onomiwo <zinoonomiwo@gmail.com>"]
edition = "2018"

[dependencies]
disjunctgraph = { path = "../disjunctgraph"}
jobshop = { path = "../jobshop"}
rand = "0.6.5"

gtk = { version = "0.5", features = ["v3_22"] }
gdk = "0.9.0"
cairo-rs = "0.5.0"

relm = "0.15.2"
relm-derive = "0.15.2"
relm-attributes = "0.15.2"