[package]
name = "jobshop-gui"
version = "0.1.0"
authors = ["Zino Onomiwo <zinoonomiwo@gmail.com>"]
edition = "2018"

[dependencies]
disjunctgraph = { path = "../disjunctgraph"}
jobshop = { path = "../jobshop"}
rand = "0.6.5"

gtk = { version = "0.5", features = ["v3_22"] }
gdk = "0.9.0"
cairo-rs = "0.5.0"

relm = { path = "../relm" }
relm-derive = { path = "../relm/relm-derive" }
relm-attributes = { path = "../relm/relm-attributes" }