
[package]
name = "jobshop_server"
version = "0.0.1"
workspace = "../"
publish = false

[dependencies]
rocket = "0.4.0"
rocket_contrib = { version = "0.4.0", features = ["tera_templates", "json"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }

serde = "1.0.90"
serde_derive = "1.0.90"
serde_json = "1.0.39"

clap = "2.33.0"

disjunctgraph = { path = "../disjunctgraph"}
jobshop = { path = "../jobshop"}